add nav links to website

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+	<a href="goodbye.html"> Goodbye Page </a>
+	
 	<!-- Head and subhead -->
 	<h1>Programming and Data for Policymakers [DPI-691M]</h1>
 	<h2>Welcome to shopping days!</h2>
