background change in goodbye page

--- a/goodbye.html
+++ b/goodbye.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!-- Link stylesheet (linked above body) -->
+	<link rel="stylesheet" type="text/css" href="styles.css">
+
 <html>
 	
 <a href="index.html"> Home Page </a>
