add text to home

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<a href="goodbye.html"> Goodbye Page </a>
-	
+
 	<!-- Head and subhead -->
 	<h1>Programming and Data for Policymakers [DPI-691M]</h1>
 	<h2>Welcome to shopping days!</h2>
@@ -17,7 +17,8 @@
 	<img src="https://www.hks.harvard.edu/sites/default/files/images/paragraph_footer/harvard-kennedy-school-logo_1.png"/>
 
 	<!-- Paragraphs of text -->
-	<p>You should take this course whether or not you plan to code for a living.</p>
+	<p>You should take this course whether or not you plan to code for a living. It's been a great class.</p>
+	
 	<p>It will help you:</p>
 
 	<!-- Unordered List (bullet points) -->
