--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	<img src="https://www.hks.harvard.edu/sites/default/files/images/paragraph_footer/harvard-kennedy-school-logo_1.png"/>
 
 	<!-- Paragraphs of text -->
-	<p>You should take this course whether or not you plan to code for a living. It's been a great class.</p>
-	
+	<p>You should take this course whether or not you plan to code for a living. It's been a great class. I've learned so much.</p>
+
 	<p>It will help you:</p>
 
 	<!-- Unordered List (bullet points) -->
