--- a/goodbye.html
+++ b/goodbye.html
@@ -13,7 +13,7 @@
   <body>
     <h1>Goodbye World</h1>
     <h2>Adios</h2>
-    <p> What a short website </p>
+    <p> It's a short yet powerful website. I've never been able to set up a website before. </p>
   </body>
 
 </html>
