--- a/goodbye.html
+++ b/goodbye.html
@@ -14,6 +14,11 @@
     <h1>Goodbye World</h1>
     <h2>Adios</h2>
     <p> It's a short yet powerful website. I've never been able to set up a website before. </p>
+
+<iframe title="Made a chart on datawrapper" aria-label="chart" id="datawrapper-chart-rsTYu" src="https://datawrapper.dwcdn.net/rsTYu/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="600"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}}))}();
+
+</script>
+
   </body>
 
 </html>
